--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "react": "16.14.0"
   },
   "scripts": {
-    "postinstall": "wix sync-types",
     "dev": "wix dev",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "sync": "git pull && git add . && git commit -m 'Auto-sync' && git push",
+    "deploy": "wix publish --yes",
+    "optimize": "npm run lint && git status"
   }
 }
